--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <aside>
+      <img class="phones" src="images/phones.png" alt="Phones">
+    </aside>
+
+    <section class="section-top">
+    <nav class="nav">
+      <ul>
+        <li><img src="images/brand.png" alt=""></li>
+        <li class="button">
+          <button class="btn">
+            <img class="home" src="images/home.png" alt="">
+            Log in
+          </button>
+        </li>
+      </ul>
+    </nav>
+    </section>
+    <section class="section-bottom">
+    <div class="text">
+      <!-- <img src="images/frame.png" alt=""> -->
+      <h1 class="title">Capture and Share the World's Moments</h1>
+      <p class="p">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p> 
+      
+      <p class="p"> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+    
+    <p class="p"> Oh yeah, did we mention it's free?</p>
+    <div class="apple-android">
+      <img src="images/badge-iphone.png" alt="logo apple">
+      <img class="android" src="images/badge-android.png" alt="logo android">
+    </div>
+   </div>
+    </section>
+
+    <footer>
+      <ul class="footer">
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
   </body>
 </html>
