--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <nav>
+        <img id="header-brand-logo" src="./images/brand.png" alt="brand-logo"/>
+        <a href="#">
+          <img id="header-home-button"src="./images/home.png" alt="home"/>
+          Log in
+        </a>
+      </nav>
+    </header>
+
+    <section id="section-welcome">
+      <figure>
+        <img src="./images/phones.png" alt="phones"/>
+      </figure>
+      <div>
+        <h2>Capture and Share </br>the World's Moments</h2>
+        <article>
+          Instagram <strong>capture and Share</strong> the <strong>World's</strong>. Moments Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+          Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+          Jobs Privacy Terms &copy; 2014 Instagram
+        </article>
+        <div>
+          <img src="./images/badge-iphone.png"/>
+          <img src="./images/badge-android.png"/>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Suppport</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Api</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+        <div>
+          <img src="./images/copyrigth.jpg"/>
+          <h4>2004 Instagram</h4>
+        </div>
+    </footer>
+
   </body>
 </html>
