--- a/index.html
+++ b/index.html
@@ -19,28 +19,34 @@
           <img src="/images/brand.png" alt="instagram logo">
         </div>
         <div class="login">
-          <button class="login_button"><img src="/images/home.png" alt="">Log in</button>
-
-        </div>
+          <div class="login_icon">
+            <img src="/images/home.png" alt="home icon">
+          </div>
+          <div class="login_text">
+            <p>Log in</p>
+          </div>
+          </button>
       </nav>
 
       <div class="text_container">
         <div class="text">
-          <h2>Instagram Capture and Share the World's Moments</h2>
+          <h2>Capture and Share <br> the World's Moments</h2>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
             friends and family.
           </p>
           <p>
             Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
             world.
+          </p>
+          <p>
             Oh yeah, did we mention it's free?
           </p>
         </div>
         <div class="download_links">
-          <img src="/images/badge-iphone.png" alt="ios download link">
-          <img src="/images/badge-android.png" alt="android download link">
+          <a href="#"><img class="img_1" src="/images/badge-iphone.png" alt="ios download button"></a>
+          <a href="#"><img class="img_2" src="/images/badge-android.png" alt="android download button"></a>
         </div>
       </div>
     </div>
@@ -48,18 +54,16 @@
 
   <footer class="footer_container">
     <ul class="footer_links">
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
     </ul>
-    <div class="copyright">
-      <p>&copy; 2014 Instagram</p>
-    </div>
+    <p id="copyright">&copy; 2014 Instagram</p>
   </footer>
 </body>
 
