--- a/index.html
+++ b/index.html
@@ -5,12 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="first-div">
+
+      <div class="phone">
+        <img src="images/phones.png" alt="phones" class="image-phone">
+        <div>
+          <img src="images/brand.png" alt="logo-instagram">
+          <img src="images/home.png" alt="home" class="image-button image-download">
+          <span class="button-log image-download">Log in</span>
+          <section id="description" class="background-image">
+            <h1>Capture and Share the World's Moments</h1>
+            <article>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</article>
+            <article>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</article>
+            <article>Oh yeah, did we mention it's free?</article>
+            <div style="padding: 20px;">
+              <img src="images/badge-iphone.png" alt="download-appstore">
+              <img src="images/badge-android.png" alt="download-android">
+            </div>
+          </section>
+        </div> 
+      </div>
+
+    </div>
+    <footer class="footer footer-ul">
+      <ul>
+        <li> <a href="#" >About Us</a></li>
+        <li> <a href="#">Support</a></li>
+        <li> <a href="#">Blog</a></li>
+        <li> <a href="#">Press</a></li>
+        <li> <a href="#">Api</a></li>
+        <li> <a href="#">Jobs</a></li>
+        <li> <a href="#">Privacy</a></li>
+        <li> <a href="#">Terms</a></li>
+        <li class="">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
