primer ejercicio del lab

--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <body class="header">
+    <header>
+  </header>
+    <div class="style-horizontal">
+      <section>
+        <img src="images/phones.png" alt="Phone image goes here">
+      </section>
+      <section>
+        <article class="style-title">
+          <h1><img src="/images/brand.png"></h1>
+          <button class="button">
+          <img src="images/home.png" alt="home image goes here"/>
+          <p>Log in</p>
+          </button>
+        </article>
+        <section class="border">
+          <h2>Capture and Share the World's Moments</h2>
+          
+          <article>
+            <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with
+              friends and family.</p><p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><p>Oh yeah, did we mention it's free?</p>
+                <img src="/images/badge-iphone.png" alt="Logo of iphone">
+                <img src="/images/badge-android.png" alt="Logo of Android">
+              
+          </article>
+         </section>
+      </section>
+</div>
+  <footer class="style-bottom">
+    <ul class="footer">
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li class="li">&copy; 2014 Instagram
+      </li>
+    </ul>
+  </footer>
   </body>
 </html>
