--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link href="styles/style.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div id="top-background">
+    <div id="centered-items">
+      <div id="phones"><img src="images/phones.png" alt="smartphones"></div>
+      <section id="right-panel">
+        <div id="logo-and-button">
+          <div id="insta-logo"><img src="images/brand.png" alt="instagram logo"></div><a href="#" class="button"><img
+              src="images/home.png">Log
+            in</a>
+        </div>
+
+        <article id="presentation">
+          <h1>Capture and Share<br>the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and
+            <b>fun</b> way to share
+            your
+            life with
+            friends and family.
+          </p>
+          <p> Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <a href="#"><img class="imgbadges" src="images\badge-iphone.png" alt="Download on the App Store"></a>
+          <a href="#"><img class="imgbadges" src="images\badge-android.png" alt="Get it on Google Play"></a>
+        </article>
+      </section>
+    </div>
+    <div class="break"></div>
+    <nav><a href="">
+        About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a> &copy; 2014 INSTAGRAM
+    </nav>
+    <div class="break"></div>
+  </div>
+
+
+
+</body>
+
 </html>
