--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+
+<main class="init">
+
+<div class="div-one">
+    <section class="">
+        <figure>
+           <img src="images/phones.png" alt="">
+        </figure>
+    </section>
+</div>
+
+
+
+  <div>
+    <div>
+    <figure class="instagram">
+      <img src="images/brand.png" alt="">
+       <button class="log"><img src="images/home.png" width="30">Log in</button>
+    </figure>
+  </div>
+  <section class="div-two"> 
+         <h1>Capture and Share<br/> the World´s Moments</h1>
+  
+
+         
+        <p>Instagram is a <strong>fast</strong>, <strong>beatiful</strong>, and <strong>fun</strong>, way to share your life<br/> with friends and family.<br/> 
+        <div class="parrafo">Take a picture or video, choose a filter to transform its look<br/>and feel, then post to Instagram - it´s that easy. You can<br/>even share to Facebook, Twitter, Tumblr and more. It´s a<br/> a new way to see the world.</div>
+        <br>Oh yeah, did we mention it´s free?
+        </p>
+
+      <figure class="iphone">
+          <a href="#"><img src="images/badge-iphone.png" alt="AppStore"><a/>
+          <a href="#"><img src="images/badge-android.png" alt="Android"><a/>
+   
+      </figure>
+</section>
+
+</div>
+
+</main>
+<article>
+
+  <footer class="footer">
+      <p>ABOUT US   SUPPORT    BLOG  PRESS    API   JOBS   PRIVACY    TERMS    © 2014 INSTAGRAM</p> 
+
+  </footer>
+
+</article>
+
+
+
+
+ 
   </body>
 </html>
