--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="linea">
+      <section class="izquierda">
+          <img class="foto" src="images/phones.png" alt="imagen telefono">
+      </section>
+      <section class="derecha">
+        <div class="seccion">
+          <img src="images/brand.png" alt="logo instagram">
+          <button class="bt1" type="submit"><img src="images/home.png" alt="home" />Log in</button>
+        </div>
+        <div class="fondo_blanco">
+          <img src="images/frame.png" alt="fondo blanco">
+          <h1 class="texto">Capture and Share the World's Moments</h1>
+          <p class="texto2">Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            -it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="descarga">
+          <img src="images/badge-iphone.png" alt="descarga apple">
+          <img src="images/badge-android.png" alt="descarga android">
+        </div>
+      </section>
+    </div>
+    <footer class="informacion">
+      <nav>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a>2014 Instagram</a>
+      </nav>
+    </footer>
   </body>
-</html>
