--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+  <body>    
+    <div class="content content-blue">  
+      <img id="phone" src="./images/phones.png">   
+        <div class="features"> 
+          <div class="flex__container">
+           <img class="inst-logo" src="./images/brand.png"> 
+           <button  id="login"><img class="home_icon" src="images/home.png"><a class="text">Log in</a></button> 
+          </div> 
+          <div class="rest__content">
+           <h1>Capture and Share the World the moments</h1>  
+           <br>
+           <p>Instagram is a  <b>fast,beautiful and fun</b> way to share your life with
+             friends and family. </p> 
+           <br>
+           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+           <br>
+           <p>Oh yeah, did we mention it's free?</p> 
+           <div class="links">
+             <img src="./images/badge-iphone.png">
+             <img class="android" src="./images/badge-android.png">
+           </div>
+         </div>
+       </div>  
+     </div>   
+      </div> 
+    <footer class="footer"> 
+      <div class="footer__links">
+        <ul>
+          <li class="footer__link">ABOUT US</li>
+          <li class="footer__link">SUPPORT</li>
+          <li class="footer__link">BLOG</li>
+          <li class="footer__link">PRESS</li>
+          <li class="footer__link">API</li>
+          <li class="footer__link">JOBS</li>
+          <li class="footer__link">PRIVACY</li>
+          <li class="footer__link">TERMS</li>
+          <li class="footer__link">2014 INSTAGRAM</li>
+        </ul>
+      </div>
+    </footer>
+  </body>   
 </html>
