--- a/index.html
+++ b/index.html
@@ -4,13 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+   <link rel="stylesheet" href="/home/pau/lab-css-instagram-clone/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container1">
+      <!-- Contenedor del telefono, logo, login, texto y logos de androd/ios -->
+      <div class="subContainer1">
+        <img src="/home/pau/lab-css-instagram-clone/images/phones.png" alt="phones">
+      </div>
+
+      <div class ="subContainer2">
+        <div class="box1">
+          <img src="/home/pau/lab-css-instagram-clone/images/brand.png" alt="Photo camera">
+          <button type="submit"><img src="/home/pau/lab-css-instagram-clone/images/home.png" alt="home"/>Log in</button>
+        </div>
+        <main>
+          <aside class="box2"> 
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br><br>Oh yeah, did we mention it's free?</p>
+          <img src="/home/pau/lab-css-instagram-clone/images/badge-iphone.png" alt="badge-iphone">
+          <img src="/home/pau/lab-css-instagram-clone/images/badge-android.png" alt="badge-android">
+          </aside>  
+        </main>  
+      </div> 
+    </div>
+    <div class="container2">
+      <!-- Contenedor de la lista inferior -->
+      <div class="box3">
+        <footer>
+          <nav>
+            <ul class ="desplegable">
+              <li>
+                  <a href="index.html">
+                    About Us
+                  </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  Support  
+                </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  Blog
+                </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  Press
+                </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  API
+                </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  Jobs
+                </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  Privacy
+                </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  Terms
+                </a>
+              </li>
+          </nav>
+        </footer>
+        &copy; 2014 Instagram 
+      </div>  
+    </div>
   </body>
 </html>
