--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="/home/pau/lab-css-instagram-clone/images/phones.png" alt="phones">
       </div>
 
-      <div class ="subContainer2">
+      <div class ="subContainer2"><!--contenedor de la camara y log in-->
         <div class="box1">
           <img src="/home/pau/lab-css-instagram-clone/images/brand.png" alt="Photo camera">
           <button type="submit"><img src="/home/pau/lab-css-instagram-clone/images/home.png" alt="home"/>Log in</button>
