--- a/index.html
+++ b/index.html
@@ -5,12 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+      <div class="phone">
+<div class="iphone">
+        <img src="images/phones.png" alt="phones">
+      </div>
+      <div class="align">
+        <div class='log'>
+        <img src="images/brand.png" alt="brand">
+        <button type="button">
+        <img src="images/home.png" alt="home">
+        Log in
+      </button>
+      </div>
+        <div class="header">
+   <h2> Capture and Share the World's Moments</h2>
+   <p >Instagram is a fast, beautiful and fun way to share your life with
+    friends and family.<br>
+     Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+    Oh yeah, did we mention it's free?  </p>
+    <div class="logos">
+      <img src="images/badge-iphone.png" alt="iphone">
+      <img src="images/badge-android.png"alt="android">
+    </div>
+    </div>
+  </div>
+  </div>
+  <ul>
+    <div class="links">
+      <a href="htttps">About Us</a>
+<a href="htttps">Support</a>
+<a href="htttps">Blog</a>
+<a href="htttps">Press</a>
+<a href="htttps">API</a>
+<a href="htttps">Jobs</a>
+<a href="htttps">Terms</a>
+<a href="htttps">&copy; 2014 Instagram</a>
+</div>
   </body>
 </html>
