added html and css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  
+    <div id="container">
+      <div class="left">
+        <img src="images/phones.png" alt="Phones" />
+      </div>
+      <div class="right">
+        <div class="header">
+          <img src="images/brand.png" alt="Instagram Brand" />
+          <button class="button"><img src="images/home.png" alt="Home" /> Log In</button> 
+        </div>
+        <div class="content">
+          <h1>Capture and Share the World's Moments</h1><br>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+          <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+          <br>
+          Oh yeah, did we mention it's free?<br>
+          <br>
+          <a href="#"><img src="images/badge-iphone.png" alt="Apple Store" /></a> <a href="#"><img src="images/badge-android.png" alt="Google Play" /></a>
+        </div>
+      </div>
+    </div>
+  
+    <footer>
+      <a href="#">About Us</a> &nbsp;&nbsp;&nbsp; <a href="#">Support</a> &nbsp;&nbsp;&nbsp; <a href="#">Blog</a> &nbsp;&nbsp;&nbsp; <a href="#">Press</a> &nbsp;&nbsp;&nbsp; <a href="#">API</a> &nbsp;&nbsp;&nbsp; <a href="#">Jobs</a> &nbsp;&nbsp;&nbsp; <a href="#">Privacy</a> &nbsp;&nbsp;&nbsp; <a href="#">Terms</a> &nbsp;&nbsp;&nbsp; &copy; 2014 Instagram
+    </footer>
   </body>
 </html>
