--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+  <div class="container">
+    <div class="box-contaner">
+      <div class="left">
+        <img src="images/phones.png" alt="phone" class="phone">
+      </div>
+
+      <div class="right">
+        <div class="right-head">
+          <img src="images/brand.png" alt="brand">
+          <button>
+            <img src="images/home.png" alt="home">
+            <span>Log in</span>
+          </button>
+        </div>
+        <div class="right-contents">
+          <img src="images/frame.png" class="frame">
+          <h1 class="title">
+            Capture and Share<br>the World's Moments
+          </h1>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+          share your life <br>with friends and family.
+          </p> 
+          <p>
+            Take a picture or video, choose a filter to transform its look<br>
+            and feel, then post to Instagram &mdash; it's that easy. You can<br>
+            even share to Facebook, Twitter, Tumblr and more. It's a <br>
+            new way to see the world.</p> 
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="images">
+            <img src="images/badge-iphone.png" alt="iphone">
+            <img src="images/badge-android.png" alt="android">
+          </div>
+        </div>
+
+      </div>
+  </div>
+  </div>
+  <div class="footer">
+    <div class="links">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+    <div class="copy-right">
+      &copy; 2014 INSTAGRAM
+    </div>
+  </div>
+     
+  </div>
+</body>
+
 </html>
