--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="principal-flex">
+      <div class="phone">
+        <img src="images/phones.png" alt="">
+      </div>
+      <div class="info-flex">
+        <div class="header-log">
+          <img src="images/brand.png" alt="Instagram">
+          <button>
+            <img src="images/home.png" alt="">
+            <p>Log in</p>
+          </button>
+        </div>
+        <div class="info-text">
+          <h4>Capture and Share the World's Moments </h4>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?</p>
+          <div>
+            <img src="images/badge-iphone.png" alt="">
+            <img src="images/badge-android.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer id="footer">
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+          <p>&copy; 2014 Instagram</p>
+        </ul>
+   
+    </footer>
   </body>
 </html>
