falta stylos de h y p

--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
       <div class="info-flex">
         <div class="header-log">
           <img src="images/brand.png" alt="Instagram">
-          <button>
-            <img src="images/home.png" alt="">
-            <p>Log in</p>
+          <button class="log-button">
+            <p> <img src="images/home.png" alt="">Log in</p>
           </button>
         </div>
         <div class="info-text">
           <h4>Capture and Share the World's Moments </h4>
           <p>Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            friends and family.</p>
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-            Oh yeah, did we mention it's free?</p>
+          </p>
+          <p> Oh yeah, did we mention it's free?</p>
+            
           <div>
             <img src="images/badge-iphone.png" alt="">
             <img src="images/badge-android.png" alt="">
