--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </p>
           <p> Oh yeah, did we mention it's free?</p>
             
-          <div>
+          <div class="badges">
             <img src="images/badge-iphone.png" alt="">
             <img src="images/badge-android.png" alt="">
           </div>
