fin sin responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="info-text">
           <h4>Capture and Share the World's Moments </h4>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
+          <p>Instagram is a <span class="bold"> fast, beautiful </span>and <span class="bold">fun</span> way to share your life with
             friends and family.</p>
             <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -44,7 +44,7 @@
           <li><a href="">Jobs</a></li>
           <li><a href="">Privacy</a></li>
           <li><a href="">Terms</a></li>
-          <p>&copy; 2014 Instagram</p>
+          <li><span class="copyRight">&copy; 2014 Instagram</span></li>
         </ul>
    
     </footer>
