clone instagram ready

--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+  <section class="allLanding">
+    <div class="leftSite">
+      <img src=images/phones.png alt="phone-insta">
+    </div>
+    <div class="rightSite">
+      <div class="upperRight">
+        <img src="/images/brand.png" alt="logo-insta">
+        <button class="logIn"><img src="/images/home.png" alt="home-insta"> Log in</button>
+      </div>
+      <div class="bottomRight">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <b>fast </b>, <b>beautiful </b> and <b>fun</b> way to share your life with
+          friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.<br> Oh yeah, did we mention it's free?</p>
+        <div class="download">
+          <img src="images/badge-android.png" alt="download-android">
+          <img src="/images/badge-iphone.png" alt="download-iphone">
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="bottomSite">
+    <ul class="listaBottom">
+      <li><a href="#">ABOUT US</a></li>
+      <li> <a href="#">SUPPORT</a></li>
+      <li> <a href="#">BLOG</a></li>
+      <li> <a href="#">PRESS</a></li>
+      <li> <a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+    </ul>
+    <p>2014 INSTAGRAM</p>
+  </div>
+
+</body>
+
 </html>
