arregladas las negritas

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       </div>
       <div class="bottomRight">
         <h1>Capture and Share <br> the World's Moments</h1>
-        <p>Instagram is a <b>fast </b>, <b>beautiful </b> and <b>fun</b> way to share your life with
-          friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post to
+        <p>Instagram is a <span>fast</span>, <span>beautiful </span> and <span>fun</span> way to share your life with
+          friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post
+          to
           Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
           world.<br> Oh yeah, did we mention it's free?</p>
