--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href = "styles/style.css" rel="stylesheet">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <div class = "background">
+    <div class = "container">
+      <div class= "left-side">
+        <img src="/images/phones.png"/> 
+      </div>
+      <div class = "right-side">
+        <div class = "top">
+          <div class="banner">
+            <img src="images/brand.png">
+          </div>
+          <a id= "login-button" href=""><img src ="/images/home.png"/>&nbsp  &nbsp Log in</a>
+        </div>  
+        <div class = "bottom">
+          <div class ="text">
+            <h1>Capture and Share <br> the World's Moments</h1>
+            <h4> Instagram is a <span class = "special-words">fast</span>, <span class = "special-words">beautiful</span> and 
+                  <span class = "special-words">fun</span> way to share your life with
+                  friends and family.
+                  <br><br>
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                  <br><br>Oh yeah, did we mention it's free?</h4>
+          </div>
+          <div class ="buttons">
+            <img src = "images/badge-iphone.png" href ="" alt ="appstore download"> 
+            <img src = "images/badge-android.png" href ="" alt ="googleplay download"> 
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Support</a></li> 
+        <li><a href="">Blog</a></li>
+        <li><a href="">Press</a></li> 
+        <li><a href="">API</a></li>  
+        <li><a href="">Jobs</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+        <li id = "copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
   </body>
 </html>
