--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+  <div class="main-container">
+
+
+
+    <div>
+      <img src="/images/phones.png" alt="">
+    </div>
+
+    <div class="text-container">
+      <div>
+        <div class="insta-logo-and-button">
+          <img src="/images/brand.png" alt="">
+          <div class="button-container">
+            <button class="button-text"> <img src="/images/home.png" alt=""> Log In</button>
+          </div>
+        </div>
+        <div class="plain-text-container">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.</p>
+          <p>Oh yeah, did we mention it's free? </p>
+          <div>
+            <img class="download-img" src="/images/badge-iphone.png" alt="">
+            <img class="download-img" src="/images/badge-android.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+  </div>
+
+
+  <footer>
+    <a href="">ABOUT US</a>
+    <a href="">SUPPORT</a>
+    <a href="">BLOG</a>
+    <a href="">PRESS</a>
+    <a href="">API</a>
+    <a href="">JOBS</a>
+    <a href="">PRIVACY</a>
+    <a href="">TERMS</a>
+  </footer>
+</body>
+
 </html>
