WD082021 - Adrian Fernandez

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="/images/phones.png" alt="Phones">
         <div class= 'column-right'>
           <div class='logo-login-box'>
-            <img src="/images/brand.png" alt="Instagram"> 
+            <img src="/images/brand.png" alt="Instagram" class='brand-image'> 
             
             <button class='log-in-button'> <img src="/images/home.png" alt=""> Log in</button>
           
