--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <div class="image">
+        <img src="/images/phones.png" alt="phones" />
+      </div>
+      <div class="line-break"></div>
+      <div class="main-text">
+        <img src="/images/brand.png" alt="">
+        <button><img src="/images/home.png" alt=""> <p>Log In</p></button>
+      </div>
+      <div class="card">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends
+          and family. 
+        </p>
+        <p>
+            Take a picture or video, choose a filter to transform its look
+            and feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+        </p>
+        <p>
+            Oh yeah, did we mention it's free? 
+        </p>
+          <div class="apps">
+            <a href="#"><img src="/images/badge-iphone.png" alt=""></a>
+            <div class="line-break"></div>
+            <a href="#"><img src="/images/badge-android.png" alt=""></a>
+          </div>
+        </p>
+      </div>
+
+    </section>
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li><span class="grey">&copy; 2014 Instagram</span></li>
+      </ul>
+    </footer>
   </body>
 </html>
