--- a/index.html
+++ b/index.html
@@ -40,8 +40,17 @@
   </section>
 
   <footer> 
-    About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <ul> 
+      <ol> About Us </ol>
+      <ol> Support </ol> 
+      <ol> Blog </ol>
+      <ol> Press </ol>
+      <ol> API </ol> 
+      <ol> Jobs </ol>
+      <ol> Privacy </ol>
+      <ol> Terms </ol> 
+    </ul>
+    
   </footer>
 
   </body>
