instagram clone done

--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+
+  <link rel="stylesheet"
+    href="/styles/style.css">
+</head>
+
+<body>
+  <div class="blue-background">
+  </div>
+  <section class="main-card">
+    <div class="left-side">
+      <img class="phone-img"
+        src="/images/phones.png"
+        alt="image of phones">
+    </div>
+    <div class="right-side">
+      <img class="ig-logo"
+        src="/images/brand.png"
+        alt="Instagram logo">
+      <a class="log-in-btn"
+        href="#">
+        <img class="home-icon"
+          src="/images/home.png"
+          alt="home button icon"> log in
+      </a>
+      <section class="text-section">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>
+          Instagram is a <span class="text-span">fast, beautiful</span> and <span class="text-span">fun</span> way to
+          share your life with
+          friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <div class="bottom-buttons">
+          <a href="#"><img src="/images/badge-iphone.png"
+              alt="apple download button"></a>
+          <a href="#">
+            <img src="/images/badge-android.png"
+              alt="androind download button">
+          </a>
+        </div>
+      </section>
+      <div>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+        <span class="copy">&copy; 2014 Instagram</span>
+      </div>
+    </div>
+  </section>
+
+</body>
+
 </html>
