--- a/index.html
+++ b/index.html
@@ -4,13 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main">
+      <div class="bg-tile"><img src="/images/bgtile.png" alt="" /></div>
+      <div class="main-content-container">
+        <div class="left-container">
+          <img src="/images/phones.png" alt="phones" />
+        </div>
+
+        <div class="right-container">
+          <div class="right-first-subcontainer">
+            <img class="main-logo" src="/images/brand.png" alt="logo" />
+            <div class="home-button">
+              <button>
+                <img src="/images/home.png" alt="logo" />
+                <div>Log In</div>
+              </button>
+            </div>
+          </div>
+          <div class="right-second-subcontainer">
+            <div class="title">
+              <h5>Capture and Share the World's Moments</h5>
+            </div>
+
+            <div class="description">
+              Instagram is a
+              <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your
+              life with friends and family.
+            </div>
+
+            <div class="description">
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </div>
+
+            <div class="description">Oh yeah, did we mention it's free?</div>
+
+            <div class="app-buttons">
+              <img class="badge" src="/images/badge-iphone.png" alt="" />
+              <img class="badge" src="/images/badge-android.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <ul>
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">SUPPORT</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">JOBS</a></li>
+          <li><a href="#">PRIVACY</a></li>
+          <li><a href="#">TERMS</a></li>
+          <li><p>&copy; 2014 INSTAGRAM</p></li>
+        </ul>
+      </div>
+    </section>
+    <!-- 
+    Download on the App Store Get it on Google Play About Us Support Blog Press
+    API Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
