--- a/index.html
+++ b/index.html
@@ -1,16 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+  <div class="main-container">
+    <div class="cellphone-column">
+      <img class="phonesImg" src="images/phones.png" />
+    </div>
+    <div class="main-column">
+      <div class="header">
+        <img class="brandImg" src="images/brand.png" alt="Instagram" />
+        <button class="loginButton">
+          <img class="homeImg" src="images/home.png" />
+          Log in
+        </button>
+      </div>
+      <div class="frameContent">
+        <h1>
+          Capture and Share the World's Moments
+        </h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.
+        </p>
+  
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <div class="getItNow">
+          <img class="iphoneImg" src="images/badge-iphone.png" alt="Download on the App Store" />
+          <img class="androidImg" src="images/badge-android.png" alt="Get it on Google Play" />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-container">
+    <ul class="footer-links">
+      <li>
+        About Us
+      </li>
+      <li>
+        Support
+      </li>
+      <li>
+        Blog
+      </li>
+      <li>
+        Press
+      </li>
+      <li>
+        API
+      </li>
+      <li>
+        Jobs
+      </li>
+      <li>
+        Privacy
+      </li>
+      <li>
+        Terms
+      </li>
+    </ul>
+    &copy; 2014 Instagram
+  </div>
+</body>
+
 </html>
