--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
             <a href="" id="login-button">
-                <img src="/lab-css-instagram-clone/images/home.png">  Log in
+                <img src="/images/home.png">  Log in
             </a>
               
          </div>
