--- a/index.html
+++ b/index.html
@@ -3,14 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+   <section class="container-web">
+     <section class="container-web-content">
+       <div id="container-web-content-movileimg">
+         <img src="images/phones.png" alt="telefono">
+       </div>
+       <div id="container-web-content-contenedorderecho">
+       <div id="container-web-content-instaimgandlogin">
+         <div>
+           <img src="images/brand.png" style="width: 100%;">
+         </div>
+         <div id="container-web-content-contenedorderecho-button">
+           <img src="">
+           <a href="">log in</a>
+         </div>
+       </div>
+       <div id="container-web-content-text">
+         <h2>Capture and Share the World's Moments</h2>
+         <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Oh yeah, did we mention it's free?</p>
+       </div>
+       <div id="container-web-content-buttons">
+        <img src="./images/badge-iphone.png" alt="badge-iphone">
+        <img src="./images/badge-android.png" alt="badge-android">
+       </div>
+      </div>
+     </section>
+       <footer>
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </nav>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+     
+   </section>
+   
   </body>
 </html>
+
