--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             Oh yeah, , did we mention it's free?
            </p>
            <div id="download-container">
-             <img src="/lab-css-instagram-clone/images/badge-iphone.png" alt="">
-             <img src="/lab-css-instagram-clone/images/badge-android.png" alt ="">
+             <img src="/images/badge-iphone.png" alt="">
+             <img src="/images/badge-android.png" alt ="">
 
            </div>
 
