--- a/index.html
+++ b/index.html
@@ -15,33 +15,34 @@
       <img src='./images/phones.png' alt='phones' id='telefono'>
 
       <div id='brand'>
-        <img src='./images/brand.png' alt='logo'>
-        <button onclick=""> <img class="house" src='./images/home.png'>Log in</button>
+        <div class='insta'>
+          <img src='./images/brand.png' alt='logo' class='iminsta'>
+          <button onclick=""> <img class="house" src='./images/home.png'>Log in</button>
+        </div>
+        
       
 
         <section id='text'>
-          <h2 id='titol'>Capture and Share<br> the World's Moments</h2>
+          <h3 id='titol'>Capture and Share<br> the World's Moments</h3>
           <p>
-            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.<br>
 
             Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram 
             it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br>
 
             Oh yeah, did we mention it's free?
           </p>
-
           <div>
             <img src='./images/badge-iphone.png' alt='iphone'>
             <img src='./images/badge-android.png' alt='android'>
           </div>
-
         </section>
         </div>
     </section>
 
   </body>
 
-  <footer class='list'>
+  <footer>
     <ul>
       <li><a href="#">ABOUT US</a></li>
       <li><a href="#">SUPPORT</a></li>
@@ -51,7 +52,7 @@
       <li><a href="#">JOBS</a></li>
       <li><a href="#">PRIVACY</a></li>
       <li><a href="#">TERMS</a></li>
-      <li id='copy'>&copy; 2014 Instagram</li>
+      <li>&copy; 2014 Instagram</li>
     </ul>
   </footer>
 </html>
